--- a/WCFLibrary/Web.config
+++ b/WCFLibrary/Web.config
@@ -1,6 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-
+	<connectionStrings>
+		<add
+		  name="LibraryDbConnection"
+		  connectionString="Data Source=(localdb)\MSSQLLocalDB;
+                        Initial Catalog=LibraryDB;
+                        Integrated Security=True"
+		  providerName="System.Data.SqlClient" />
+	</connectionStrings>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
   </appSettings>
