--- a/WcfLibrary.Infrastructure/WcfLibrary.Infrastructure.csproj
+++ b/WcfLibrary.Infrastructure/WcfLibrary.Infrastructure.csproj
@@ -51,11 +51,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\LibraryDbContext.cs" />
+    <Compile Include="Migrations\202601212243259_InitialCreated.cs" />
+    <Compile Include="Migrations\202601212243259_InitialCreated.Designer.cs">
+      <DependentUpon>202601212243259_InitialCreated.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\AuthorRepository.cs" />
     <Compile Include="Repository\BookRepository.cs" />
     <Compile Include="Repository\GenreRepository.cs" />
     <Compile Include="Repository\LoanRepository.cs" />
+    <Compile Include="Repository\UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\WcfLibrary.Application\WcfLibrary.Application.csproj">
@@ -74,6 +80,11 @@
     <PackageReference Include="EntityFramework">
       <Version>6.5.1</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202601212243259_InitialCreated.resx">
+      <DependentUpon>202601212243259_InitialCreated.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
